fix icon issue, made program of readable

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,7 @@ select{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .dino-content {
@@ -415,7 +416,6 @@ select{
     height: 175px;
     background: #fff;
     display: block;
-    margin: auto;
     border-radius: 100%;
     padding: 10px;
     z-index: 20;
